# RacingGame

./: CMakeLists.txt
Shader/: CubeMapFragment.glsl  CubeMapVertex.glsl  carFragment.glsl  carVertex.glsl  phongFragment.glsl  phongVertex.glsl
include/: glad.c
include/assimp/: scene.h
include/glad/: glad.h
include/imgui/: main.cpp
resources/objects/Lamborghini/: untitled.mtl
resources/objects/car/: BMW_M3_GTR.mtl
resources/objects/race-track/: race-track.mtl
src/: Base.h  Camera.h  Car.cpp  Car.h  CubeTexture.h  DirectionalLight.cpp  DirectionalLight.h  Entity.h  Mesh.h  Shader.h  ShadowMap.h  SkyBox.h  SubMesh.h  Texture.h  main.cpp
